--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-numpy==1.19.0
-pandas==0.25.1
+click==7.1.2
 Flask==1.1.1
-scikit_learn==0.23.1
 gunicorn==19.9.0
-xgboost==1.1.1
+imbalanced-learn==0.8.0
 imblearn==0.0
+itsdangerous==1.1.0
+Jinja2==2.11.3
+joblib==1.0.1
+MarkupSafe==1.1.1
+numpy==1.19.0
+pandas==1.2.4
+python-dateutil==2.8.1
+pytz==2021.1
+scikit-learn==0.24.1
+scipy==1.6.2
+six==1.15.0
+threadpoolctl==2.1.0
+Werkzeug==1.0.1
+xgboost==1.1.1
